Change email service properties.

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -34,12 +34,13 @@ spring.jpa.properties.hibernate.format_sql=true
 # MAIL PROPERTIES
 # -------------------------------------------------------------------------------------------------------------
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=USERNAME@gmail.com
+spring.mail.host=HOST
+spring.mail.port=PORT
+spring.mail.username=USERNAME
 spring.mail.password=PASSWORD
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+mail.from=forum-spring-boot@email.com
 
 # -------------------------------------------------------------------------------------------------------------
 # TOKEN PROPERTIES
